website-source/design-01/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");

:root {
  --lzo-colour-light-grey: #ebebeb;
  --lzo-colour-dark-grey: #777;
  --lzo-bell-list-icon-width: 2rem;
  --lzo-priority-high: #ef7564;
  --lzo-priority-medium: #f6af3f;

  --size-25: 0.25rem;
  --size-50: 0.5rem;
  --size-75: 0.75rem;
  --size-80: 0.8rem;
  --size-100: 1rem;
  --size-120: 1.1rem;
  --size-200: 1.5rem;
  --size-300: 2rem;
  --size-400: 2.25rem;
  --size-500: 3rem;

  --step--2: clamp(0.61rem, calc(0.59rem + 0.06vw), 0.64rem);
  --step--1: clamp(0.73rem, calc(0.7rem + 0.14vw), 0.8rem);
  --step-0: clamp(0.88rem, calc(0.83rem + 0.24vw), 1rem);
  --step-1: clamp(1.05rem, calc(0.97rem + 0.39vw), 1.25rem);
  --step-2: clamp(1.26rem, calc(1.14rem + 0.59vw), 1.56rem);
  --step-3: clamp(1.51rem, calc(1.34rem + 0.86vw), 1.95rem);
  --step-4: clamp(1.81rem, calc(1.57rem + 1.22vw), 2.44rem);
  --step-5: clamp(2.18rem, calc(1.84rem + 1.71vw), 3.05rem);

  --column-max-width: 75ch;

  --ians-colour-light-blue: #2990ea;
  --ians-colour-dark-blue: #003366;
  --ians-colour-light-grey: #efefef;
  --ians-colour-dark-grey: #222;
  --ians-colour-gold: #fc0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.lzo-panel-reminder {
  line-height: 1.7;
  font-family: roboto, -apple-system, BlinkMacSystemFont, avenir next, avenir,
    segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
  font-weight: 300;
  font-size: var(--step-0);
}

.lzo-panel-reminder p,
.lzo-panel-reminder li {
  max-width: var(--column-max-width);
}

.lzo-panel-reminder a {
  color: var(--ians-colour-light-blue);
  text-decoration: underline;
  text-decoration-color: var(--ians-colour-light-blue);
  background-color: transparent;
  transition: all 0.3s;
}

.lzo-panel-reminder a:hover {
  color: white;
  text-decoration-color: white;
  background-color: var(--ians-colour-light-blue);
}

.lzo-panel-reminder button,
.lzo-bottom-container > a {
  cursor: pointer;
  display: inline-block;
  background-color: white;
  padding: 0.5rem var(--size-75) 0.5rem var(--size-50);
  /* padding-left: 0.35rem; */
  color: var(--ians-colour-light-blue);
  border: 1px solid var(--ians-colour-light-blue);
  border-radius: 3px;
  transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out,
    background-color 0.2s ease-in-out;
  font: inherit;
  font-size: 14px;
  font-weight: 700;
  text-decoration: none;
  text-align: left;
  width: fit-content;
}

.lzo-panel-reminder button > svg,
.lzo-bottom-container > a > svg {
  vertical-align: middle !important;
  width: var(--size-200) !important;
  height: var(--size-200) !important;
}

.lzo-panel-reminder button > span,
.lzo-bottom-container > a > span {
  display: none;
}

@media screen and (min-width: 700px) {
  .lzo-panel-reminder button > span,
  .lzo-bottom-container > a > span {
    display: inline-block;
  }
}

.lzo-panel-reminder button:hover {
  background-color: var(--ians-colour-light-blue);
  color: white;
}

.lzo-panel-reminder button:focus {
  outline: none;
  box-shadow: 0 0 0 3px var(--ians-colour-light-blue);
}

*:focus:not(:focus-visible) {
  outline: none !important;
}

.lzo-panel-reminder > #lzoToggleButtons {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.lzo-panel-reminder #lzoNoReminders {
  display: none;
  color: var(--ians-colour-dark-blue);
  font-weight: 500;
  margin-top: 0;
}

.lzo-panel-reminder h2 {
  margin: 0;
  margin-top: 1rem;
  color: var(--ians-colour-dark-blue);
  font-weight: 700;
  font-size: var(--step-2);
  padding-top: 0 !important;
  margin-bottom: 1rem;
}

.lzo-panel-reminder h2 svg {
  width: var(--step-2);
  margin-left: 0.5rem;
  vertical-align: middle;
  display: none;
}

.lzo-panel-reminder #lzoReminders {
  list-style-type: none;
  padding: 0;
  margin: 0;
  max-width: none;
  width: calc(
    (100% - var(--wb-left-margin)) -
      (100% - var(--wb-logo-left) - var(--wb-logo-width))
  );
  height: fit-content;
  transition: opacity 0.3s;
}

.lzo-panel-reminder #lzoReminders.lzo-list-hide {
  opacity: 0;
  transition: opacity 0.1s;
}

.lzo-panel-reminder #lzoReminders > li {
  position: relative;
  display: grid;
  grid-template-columns: 3rem 1fr;
  max-width: none;
  padding: 0;
  padding-bottom: 1rem;
  margin: 0;
}

.lzo-panel-reminder #lzoReminders > li .lzo-icon-bell {
  color: var(--ians-colour-light-blue);
  padding-left: 0.5rem;
  padding-right: 0.75rem;
}

.lzo-panel-reminder #lzoReminders > li .lzo-icon-bell svg {
  width: var(--lzo-bell-list-icon-width);
  height: var(--lzo-bell-list-icon-width);
}

.lzo-panel-reminder #lzoReminders > li > div {
  vertical-align: top;
  padding: 1rem;
  background-color: var(--lzo-colour-light-grey);
  box-shadow: 0 1px 1px rgb(0 0 0 / 4%), 0 2px 2px rgb(0 0 0 / 4%),
    0 4px 4px rgb(0 0 0 / 4%), 0 8px 8px rgb(0 0 0 / 4%);
}

.lzo-panel-reminder #lzoReminders > li > div {
  border-left: 0.6rem solid transparent;
}

.lzo-panel-reminder #lzoReminders > li > div.lzo-priority-high {
  border-left-color: var(--lzo-priority-high);
}

.lzo-panel-reminder #lzoReminders > li > div.lzo-priority-medium {
  border-left-color: var(--lzo-priority-medium);
}

.lzo-panel-reminder #lzoReminders > li > div h3 {
  font-size: var(--step-1);
  position: relative;
  margin: 0;
  background-color: white;
  width: fit-content;
  line-height: 1.4;
  padding: 0.5rem;
  font-weight: 500;
}

.lzo-panel-reminder #lzoReminders > li > div details {
  width: fit-content;
}

.lzo-panel-reminder #lzoReminders > li > div summary {
  cursor: pointer;
  list-style: none;
  width: fit-content;
}

.lzo-panel-reminder #lzoReminders > li > div summary::-webkit-details-marker {
  display: none;
}

.lzo-panel-reminder #lzoReminders > li > div summary > h3::after {
  content: "";
  display: inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 7px 0 7px 10px;
  border-color: transparent transparent transparent var(--ians-colour-dark-blue);
  position: absolute;
  right: 0.75rem;
  top: 50%;
  transform: translateY(-50%) rotate(0deg);
  transition: transform 0.3s;
}

.lzo-panel-reminder #lzoReminders > li > div details[open] summary > h3::after {
  transform: translateY(-50%) rotate(90deg);
}

.lzo-panel-reminder #lzoReminders > li > div summary > h3 {
  display: inline-block;
  padding-right: 2rem;
}

.lzo-panel-reminder #lzoReminders > li > div details ul {
  list-style-type: none;
  margin-top: 0.25rem;
}

.lzo-panel-reminder #lzoReminders > li > div details li {
  margin: 0;
  margin-bottom: 0.25rem;
  background-color: white;
  /* width: fit-content; */
  line-height: 1.2;
  padding: 0.5rem;
  padding-left: 1rem;
  font-weight: 500;
  color: var(--ians-colour-dark-blue);
}

.lzo-panel-reminder #lzoReminders > li > div h3 > span {
  background-color: var(--ians-colour-dark-blue);
  color: white;
  text-align: center;
  margin-right: 0.4rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.lzo-panel-reminder .lzo-guidance {
  color: var(--ians-colour-dark-grey);
  font-weight: 500;
  margin: 0;
  margin-top: 1rem;
  display: none;
}

.lzo-panel-reminder .lzo-deadline {
  margin: 0;
  margin-top: 0 !important;
  font-size: var(--step--1);
  padding: 0.5rem 1rem;
  padding-left: 0.35rem;
  background-color: white;
  font-weight: 700;
  width: fit-content;
  color: (--lzo-colour-dark-grey);
  margin-bottom: 0.5rem;
}

.lzo-panel-reminder .lzo-deadline > svg {
  color: (--lzo-colour-dark-grey);
  width: var(--step-2);
  height: var(--step-2);
  margin-right: 0.25rem;
  vertical-align: bottom;
  /* border-radius: 50%;
  padding: 0.15rem; */
}

.lzo-panel-reminder .lzo-priority-high .lzo-deadline {
  /* background-color: var(--lzo-priority-high); */
  border-left: 0.6rem solid var(--lzo-priority-high);
}

.lzo-panel-reminder .lzo-priority-medium .lzo-deadline {
  /* background-color: var(--lzo-priority-medium); */
  border-left: 0.6rem solid var(--lzo-priority-medium);
}

.lzo-panel-reminder .lzo-bottom-container {
  margin-top: 1rem;
  /* display: flex;
  flex-direction: column; */
  gap: 0.5rem;
  width: fit-content;
}

@media screen and (min-width: 700px) {
  .lzo-panel-reminder .lzo-bottom-container {
    display: flex;
    /* flex-direction: column; */
  }
}

.lzo-panel-reminder .lzo-bottom-container button > svg,
.lzo-panel-reminder .lzo-bottom-container a > svg {
  height: var(--step-2);
  width: var(--step-2);
  vertical-align: top;
  /* margin-right: 0.4rem; */
}

.lzo-panel-reminder .lzo-button-tasks > svg {
  transform: rotate(-90deg);
}

.lzo-panel-reminder .lzo-button-tasks {
  background-color: var(--ians-colour-gold);
  color: var(--ians-colour-dark-grey);
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

#lzoLoading svg {
  height: var(--step-2);
  width: var(--step-2);
  margin-right: 0.25rem;
  vertical-align: top;
  animation: rotation 1s infinite linear;
}

#lzoErrorFeedback {
  color: red;
  font-weight: bold;
  font-size: 2rem;
  display: none;
}

#lzoCloneDaddy {
  display: none;
}

@media print, screen and (min-width: 34.4375em) {
}

@media print, screen and (min-width: 50.0625em) {
  .lzo-panel-reminder #lzoReminders li {
    padding-bottom: 1.5rem;
  }

  .lzo-panel-reminder .lzo-bottom-container {
    flex-direction: row;
    gap: 1rem;
  }
}

@media screen and (min-width: 80.0625em) {
}

